--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,23 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:background="@color/primaryColor"
+        tools:context=".main.MainActivity">
 
     <TextView
             android:id="@+id/main_tv_times_of_accident"
             android:layout_width="150sp"
             android:layout_height="150sp"
-            android:text="@string/default_accident_number"
             android:layout_above="@id/main_tv_times_text"
             android:layout_centerHorizontal="true"
-            android:textAlignment="center"
+            android:background="@drawable/rectangle_border"
+            android:text="@string/default_accident_number"
             android:gravity="center"
+            android:fontFamily="@font/simpson"
+            android:textAlignment="center"
+            android:textColor="@color/secondaryTextColor"
             android:textSize="80sp"
-            android:background="@drawable/rectangle_border"/>
+            android:textStyle="bold"/>
 
     <TextView
             android:id="@+id/main_tv_times_text"
@@ -24,35 +28,41 @@
             android:layout_height="wrap_content"
             android:padding="10sp"
             android:text="@string/times_without_an_accident"
+            android:fontFamily="@font/simpson"
             android:layout_centerInParent="true"
             android:textAlignment="center"
             android:layout_marginTop="10sp"
+            android:textColor="@color/secondaryColor"
             android:textSize="50sp"
             android:textStyle="bold"/>
+
 
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/main_tv_times_text"
             android:padding="10sp"
-            android:layout_alignParentEnd="true"
-            android:orientation="vertical">
+            android:layout_centerInParent="true"
+            android:orientation="horizontal">
 
-        <Button
-                android:id="@+id/main_b_increment"
+        <ImageButton
+                android:id="@+id/main_ib_increment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"/>
-        <Button
-                android:id="@+id/main_b_decrement"
+                android:layout_margin="10sp"
+                android:src="@drawable/ic_increment_24dp"/>
+        <ImageButton
+                android:id="@+id/main_ib_decrement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"/>
-        <Button
-                android:id="@+id/main_b_clear"
+                android:layout_margin="10sp"
+                android:src="@drawable/ic_decrement_24dp"/>
+        <ImageButton
+                android:id="@+id/main_ib_clear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"/>
+                android:layout_margin="10sp"
+                android:src="@drawable/ic_clear_24dp"/>
 
     </LinearLayout>
 
