--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,11 @@
 
 
     <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@id/main_tv_times_text"
             android:padding="10sp"
-            android:layout_centerInParent="true"
+            android:gravity="center_vertical|center_horizontal"
             android:orientation="horizontal">
 
         <ImageButton
@@ -50,18 +50,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
+                android:background="@drawable/ring_button"
                 android:src="@drawable/ic_increment_24dp"/>
         <ImageButton
                 android:id="@+id/main_ib_decrement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
+                android:background="@drawable/ring_button"
                 android:src="@drawable/ic_decrement_24dp"/>
         <ImageButton
                 android:id="@+id/main_ib_clear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
+                android:background="@drawable/ring_button"
                 android:src="@drawable/ic_clear_24dp"/>
 
     </LinearLayout>
