--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/primaryColor"
-        tools:context=".main.MainActivity">
+        tools:context=".mainActivity.MainActivity">
 
     <TextView
             android:id="@+id/main_tv_times_of_accident"
-            android:layout_width="150sp"
-            android:layout_height="150sp"
+            android:layout_width="@dimen/main_box_width"
+            android:layout_height="@dimen/main_box_height"
             android:layout_above="@id/main_tv_times_text"
             android:layout_centerHorizontal="true"
             android:background="@drawable/rectangle_border"
@@ -19,21 +19,21 @@
             android:fontFamily="@font/simpson"
             android:textAlignment="center"
             android:textColor="@color/secondaryTextColor"
-            android:textSize="80sp"
+            android:textSize="@dimen/main_times_of_accident_text_size"
             android:textStyle="bold"/>
 
     <TextView
             android:id="@+id/main_tv_times_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10sp"
+            android:padding="@dimen/main_tv_padding"
             android:text="@string/times_without_an_accident"
             android:fontFamily="@font/simpson"
             android:layout_centerInParent="true"
             android:textAlignment="center"
-            android:layout_marginTop="10sp"
+            android:layout_marginTop="@dimen/main_marginTop"
             android:textColor="@color/secondaryColor"
-            android:textSize="50sp"
+            android:textSize="@dimen/main_times_text_size"
             android:textStyle="bold"/>
 
 
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/main_tv_times_text"
-            android:padding="10sp"
+            android:padding="@dimen/main_layout_padding"
             android:gravity="center_vertical|center_horizontal"
             android:orientation="horizontal">
 
@@ -49,21 +49,21 @@
                 android:id="@+id/main_ib_increment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
+                android:layout_margin="@dimen/main_ib_margin"
                 android:background="@drawable/ring_button"
                 android:src="@drawable/ic_increment_24dp"/>
         <ImageButton
                 android:id="@+id/main_ib_decrement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
+                android:layout_margin="@dimen/main_ib_margin"
                 android:background="@drawable/ring_button"
                 android:src="@drawable/ic_decrement_24dp"/>
         <ImageButton
                 android:id="@+id/main_ib_clear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
+                android:layout_margin="@dimen/main_ib_margin"
                 android:background="@drawable/ring_button"
                 android:src="@drawable/ic_clear_24dp"/>
 
