--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/primaryColor"
-        tools:context=".mainActivity.MainActivity">
+        tools:context=".main.MainActivity">
 
     <TextView
             android:id="@+id/main_tv_times_of_accident"
