Refactor and rename for more idiomatic Kotlin code

--- a/app/src/main/res/drawable/rectangle_border.xml
+++ b/app/src/main/res/drawable/rectangle_border.xml
@@ -3,9 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <stroke android:width="8sp"
-            android:color="@color/secondaryColor"/>
-
+            android:color="@color/orange"/>
         </shape>
     </item>
-
 </selector>
