--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/primaryColor"
+        android:background="@color/yellow"
         tools:context=".main.MainActivity">
 
-    <TextView
-            android:id="@+id/main_tv_times_of_accident"
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/text_view_accident_number"
             android:layout_width="@dimen/main_box_width"
             android:layout_height="@dimen/main_box_height"
-            android:layout_above="@id/main_tv_times_text"
-            android:layout_centerHorizontal="true"
             android:background="@drawable/rectangle_border"
-            android:text="@string/default_accident_number"
-            android:gravity="center"
             android:fontFamily="@font/simpson"
+            android:gravity="center"
+            android:text="@string/default_accident_number"
             android:textAlignment="center"
-            android:textColor="@color/secondaryTextColor"
-            android:textSize="@dimen/main_times_of_accident_text_size"
-            android:textStyle="bold"/>
+            android:textColor="@color/black"
+            android:textSize="@dimen/accident_number_size"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/text_view_message"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-            android:id="@+id/main_tv_times_text"
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/text_view_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/main_tv_padding"
-            android:text="@string/times_without_an_accident"
             android:fontFamily="@font/simpson"
-            android:layout_centerInParent="true"
+            android:padding="@dimen/message_padding"
+            android:text="@string/times_without_an_accident"
             android:textAlignment="center"
-            android:layout_marginTop="@dimen/main_marginTop"
-            android:textColor="@color/secondaryColor"
-            android:textSize="@dimen/main_times_text_size"
-            android:textStyle="bold"/>
-
+            android:textColor="@color/orange"
+            android:textSize="@dimen/message_text_size"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/linear_layout_buttons"
+            app:layout_constraintTop_toBottomOf="@id/text_view_accident_number" />
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/main_tv_times_text"
-            android:padding="@dimen/main_layout_padding"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal">
+            android:id="@+id/linear_layout_buttons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/button_layout_padding"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_message">
 
         <ImageButton
-                android:id="@+id/main_ib_increment"
+                android:id="@+id/image_button_increment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/main_ib_margin"
+                android:layout_margin="@dimen/margin_button"
                 android:background="@drawable/ring_button"
-                android:src="@drawable/ic_increment_24dp"/>
+                android:src="@drawable/ic_plus" />
+
         <ImageButton
-                android:id="@+id/main_ib_decrement"
+                android:id="@+id/image_button_decrement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/main_ib_margin"
+                android:layout_margin="@dimen/margin_button"
                 android:background="@drawable/ring_button"
-                android:src="@drawable/ic_decrement_24dp"/>
+                android:src="@drawable/ic_minus" />
+
         <ImageButton
-                android:id="@+id/main_ib_clear"
+                android:id="@+id/image_button_reset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/main_ib_margin"
+                android:layout_margin="@dimen/margin_button"
                 android:background="@drawable/ring_button"
-                android:src="@drawable/ic_clear_24dp"/>
+                android:src="@drawable/ic_reset" />
 
     </LinearLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
