--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="primaryColor">#ffde03</color>
-    <color name="primaryLightColor">#ffff54</color>
-    <color name="primaryDarkColor">#c7ad00</color>
-    <color name="secondaryColor">#ff5722</color>
-    <color name="secondaryLightColor">#ff8a50</color>
-    <color name="secondaryDarkColor">#c41c00</color>
-    <color name="primaryTextColor">#4cb53a</color>
-    <color name="secondaryTextColor">#000000</color>
+    <color name="yellow">#ffde03</color>
+    <color name="lemon">#ffff54</color>
+    <color name="rioja">#c7ad00</color>
+    <color name="orange">#ff5722</color>
+    <color name="coral">#ff8a50</color>
+    <color name="red">#c41c00</color>
+    <color name="apple">#4cb53a</color>
+    <color name="black">#000000</color>
 </resources>
